added div to projects and header

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 				<!-- One -->
 				<section id="one" class="wrapper style3-alt-green fade-up">
 					<div class="inner">
-						<h2>What we do</h2>
-						<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+						<h2>About me</h2>
+						<p>Recent CS graduate from WMU. <br />My favorite part of the CS field is linux development. However, I also enjoy web development and creating applications.</p>
 						<div class="features">
 							<section>
 								<span class="icon solid major fa-code"></span>
-								<h3>Lorem ipsum amet</h3>
-								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								<h3>language proficienies</h3>
+								<p>Java, Javascript, .... etc</p>
 							</section>
 							<section>
 								<span class="icon solid major fa-lock"></span>
@@ -90,19 +90,23 @@
 
 				<!-- Two -->
 					<section id="two" class="wrapper style2 spotlights">
-						<section>
+						<div class="inner">
+							<h2>Projects</h2>
+							<p>A few of the projects and how they work can be found below. <br />To see the rest of my works, you can visit my github by following this link : <a href="https://github.com/nmacklincamel">https://github.com/nmacklincamel</a> </p>
+							<div class="spotlights">
+								<section>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Neil Macklin-Camel</h2>
-									<p>Recent CS graduate from WMU. <br />My favorite part of the CS field is linux development. However, <br />I also enjoy web development and creating applications.</p>
+									<h2>Trixpica</h2>
+									<p>this is trixpica website does this this and this</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
-						<section>
+								<section>
 							<a href="https://github.com/nmacklincamel/Quadratic_Solver" class="image"><img src="images/quadratic_solver_image.png" alt="Quadratic Solver using 3 values" data-position="10% 10%" /></a>
 							<div class="content">
 								<div class="inner">
@@ -116,7 +120,7 @@
 								</div>
 							</div>
 						</section>
-						<section>
+								<section>
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
@@ -128,6 +132,8 @@
 								</div>
 							</div>
 						</section>
+							</div>
+						</div>
 					</section>
 
 
@@ -186,7 +192,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Neil Macklin-Camel. All rights reserved.</li><li>Design : <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
