revamp more pages/setup google form for on page messaging

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Edited by: Neil Macklin-Camel
 -->
 <html>
 	<head>
-		<title>Title goes here if I could think of one...</title>
+		<title>Neil Macklin-Camel | Software Engineer </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,9 +31,6 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-				<!---  NOTES:-------------------------------------------------------------------------------------------
-				[<br />] NEW LINE
-				 --->
 				<!-- Intro -->
 				<section id="intro" class="wrapper style1 fullscreen fade-up">
 					<div class="inner">
@@ -83,7 +81,7 @@
 							</section>
 						</div>
 						<ul class="actions">
-							<li><a href="generic.html" class="button">Learn more</a></li>
+							<li><a href="quadratic_solver_tool.html" class="button">Learn more</a></li>
 						</ul>
 					</div>
 				</section>
@@ -98,36 +96,36 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Trixpica</h2>
-									<p>this is trixpica website does this this and this</p>
+									<h2>Vacuum World</h2>
+									<p>A simple AI agent created to solve the vacuum world and its varied environments it can take.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="quadratic_solver_tool.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 								<section>
-							<a href="https://github.com/nmacklincamel/Quadratic_Solver" class="image"><img src="images/quadratic_solver_image.png" alt="Quadratic Solver using 3 values" data-position="10% 10%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Quadratic Solver using C</h2>
-									<p>
-										The program takes in three inputs, a b c, in that order separated by a comma and gives back two answers in decimal form.
-									</p>
-									<ul class="actions">
-										<li><a href="https://github.com/nmacklincamel/Quadratic_Solver" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
+									<a href="quadratic_solver_tool.html" class="image" title="Quadratic Solver using 3 values"><img src="images/quadratic_solver_image.png" alt="" data-position="5% 5%" /></a>
+									<div class="content">
+										<div class="inner">
+											<h2>Quadratic Solver</h2>
+											<p>
+												The program takes in three inputs, a b c, in that order separated by a comma and gives back two answers in decimal form.
+											</p>
+											<ul class="actions">
+												<li><a href="quadratic_solver_tool.html" class="button">Learn more</a></li>
+											</ul>
+										</div>
+									</div>
 						</section>
 								<section>
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Trixpica</h2>
+									<p><strong>Trixpica</strong> is a place for people to find the right websites, the right content, and the right people for the everyday questions they have.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="quadratic_solver_tool.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -146,23 +144,26 @@
 							</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+									<!--script/guide below can be found: https://blog.webjeda.com/google-form-customize/-->
+									<script type="text/javascript">var submitted=false; function showAlert() { alert ("Your message has been sent.");}</script>
+									<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='index.html';}"></iframe>
+									<form class="form" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSe81uiATs9jJrn7666RZj4Hyi_a00jrKH-rRYYqCsVg2n6KLg/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
+												<input type="text" name="entry.1495731946" id="name" />
 											</div>
 											<div class="field half">
 												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
+												<input type="text" name="entry.1704212268" id="email" />
 											</div>
 											<div class="field">
 												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
+												<textarea name="entry.850018398" id="message" rows="5"></textarea>
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><button onclick="showAlert()" class="button submit">Send Message</button></li>
 										</ul>
 									</form>
 								</section>
@@ -173,11 +174,10 @@
 											<a href="#">nmacklincamel@gmail.com</a>
 										</li>
 										<li>
-											<h3>Social</h3>
+											<h3>Sites</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="https://github.com/nmacklincamel" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="https://www.linkedin.com/in/neil-macklin-camel-3a837214a/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://github.com/nmacklincamel" class="icon brands fa-github" title="Github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.linkedin.com/in/neil-macklin-camel-3a837214a/" class="icon brands fa-linkedin-in" title="LinkedIn"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
