re-designed 'About me' section

--- a/index.html
+++ b/index.html
@@ -51,38 +51,36 @@
 						<div class="features">
 							<section>
 								<span class="icon solid major fa-code"></span>
-								<h3>language proficienies</h3>
-								<p>Java, Javascript, .... etc</p>
+								<h3>Language Proficiencies</h3>
+								<p>Java | C | Python | R | JavaScript | HTML5 | CSS | Bash<br />
+								</p>
 							</section>
 							<section>
-								<span class="icon solid major fa-lock"></span>
-								<h3>Aliquam sed nullam</h3>
-								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								<span class="icon solid major fa-atlas"></span>
+								<h3>Other Languages</h3>
+								<p>JQuery | React Native | Nodejs | AngularJS | Django | PHP | MySQL | Assembly | Git </p>
 							</section>
 							<section>
-								<span class="icon solid major fa-cog"></span>
-								<h3>Sed erat ullam corper</h3>
-								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								<span class="icon solid major fa-info-circle"></span>
+								<h3>About Linux development</h3>
+								<p>I currently trying to get my foot in the door with Linux Kernel Development. I am attempting to create my own device driver for the <strong>Logitech MX Master Mouse</strong>.
+									There already is a generic device driver, however, without the use of <strong>xbindkeys</strong>, the mouse really just isn't the same. <br /><em>[Uses C, on a Lenovo T430 Thinkpad, Kernel: 4.19.5, Host: Manjaro 17.2, Testing on VM with: Ubuntu 16.04 LTS]</em>
+								</p>
 							</section>
 							<section>
-								<span class="icon solid major fa-desktop"></span>
-								<h3>Veroeros quis lorem</h3>
-								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-							</section>
-							<section>
-								<span class="icon solid major fa-link"></span>
-								<h3>Urna quis bibendum</h3>
-								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-							</section>
-							<section>
-								<span class="icon major fa-gem"></span>
-								<h3>Aliquam urna dapibus</h3>
-								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								<span class="icon solid major fa-infinity"></span>
+								<h3>Completed Courses</h3>
+								<p>Java Programming 1 | Java Programming 2 | Foundations of Computer Science | Computer Organization and Assembly Language
+									| Digital Logic | Data Analysis using R  1 | Data Analysis using R  2 | System Programming Concepts | Data and File Structures | Intro to Web Technologies
+									| Design and Analysis of Algorithms | Database Management Systems | Software Systems Development 1 |
+									Software Systems Development 2 | Operating Systems | Artificial Intelligence   </p>
 							</section>
 						</div>
+						<!--
 						<ul class="actions">
-							<li><a href="quadratic_solver_tool.html" class="button">Learn more</a></li>
+							<li><a href="index.html" class="button">Learn more</a></li>
 						</ul>
+						-->
 					</div>
 				</section>
 
@@ -90,28 +88,28 @@
 					<section id="two" class="wrapper style2 spotlights">
 						<div class="inner">
 							<h2>Projects</h2>
-							<p>A few of the projects and how they work can be found below. <br />To see the rest of my works, you can visit my github by following this link : <a href="https://github.com/nmacklincamel">https://github.com/nmacklincamel</a> </p>
+							<p>A few of the projects and how they work can be found below. <br /> If you would like to see the rest of my works, you can visit my github by following this link : <a href="https://github.com/nmacklincamel">https://github.com/nmacklincamel</a> </p>
 							<div class="spotlights">
-								<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Vacuum World</h2>
-									<p>A simple AI agent created to solve the vacuum world and its varied environments it can take.</p>
-									<ul class="actions">
-										<li><a href="quadratic_solver_tool.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
+								<!-- ** will have to upload code, create description page -- using the quadratic_solver_tool.html as template, using 3 screenshots of running the program**
+                                    <section>
+                                        <a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+                                <div class="content">
+                                    <div class="inner">
+                                        <h2>Vacuum World</h2>
+                                        <p>A simple AI agent created to solve the vacuum world and its varied environments it can take.</p>
+                                        <ul class="actions">
+                                            <li><a href="quadratic_solver_tool.html" class="button">Learn more</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </section>
+                            -->
 								<section>
 									<a href="quadratic_solver_tool.html" class="image" title="Quadratic Solver using 3 values"><img src="images/quadratic_solver_image.png" alt="" data-position="5% 5%" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>Quadratic Solver</h2>
-											<p>
-												The program takes in three inputs, a b c, in that order separated by a comma and gives back two answers in decimal form.
-											</p>
+											<p>The program takes in three inputs, a b c, in that order separated by a comma and gives back two answers in decimal form.</p>
 											<ul class="actions">
 												<li><a href="quadratic_solver_tool.html" class="button">Learn more</a></li>
 											</ul>
@@ -125,7 +123,7 @@
 									<h2>Trixpica</h2>
 									<p><strong>Trixpica</strong> is a place for people to find the right websites, the right content, and the right people for the everyday questions they have.</p>
 									<ul class="actions">
-										<li><a href="quadratic_solver_tool.html" class="button">Learn more</a></li>
+										<li><a href="elements.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -163,7 +161,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><button onclick="showAlert()" class="button submit">Send Message</button></li>
+											<li><button onclick="showAlert()" class="button">Send Message</button></li>
 										</ul>
 									</form>
 								</section>
