ready to push to final

--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
 									</div>
 						</section>
 								<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="Trixpica.html" class="image" title="Trixpica"><img src="images/Trixpica_logo.png" alt="" data-position="" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Trixpica</h2>
 									<p><strong>Trixpica</strong> is a place for people to find the right websites, the right content, and the right people for the everyday questions they have.</p>
 									<ul class="actions">
-										<li><a href="elements.html" class="button">Learn more</a></li>
+										<li><a href="Trixpica.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
