--- a/quadratic_solver_tool.html
+++ b/quadratic_solver_tool.html
@@ -16,19 +16,18 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Projects</a>
+				<a href="index.html" class="title">Neil Macklin-Camel</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="index.html#two" class="active">Projects</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="index.html#one">About me</a></li>
 					</ul>
 				</nav>
 			</header>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
