fixed image sizing

--- a/Trixpica.html
+++ b/Trixpica.html
@@ -36,14 +36,15 @@
 							<!-- icon : back archway: b89f57, front archway: dadada, color of Trixpica: b89f57, font: Montserrat, background color: 223756
 							https://bit.ly/36tnqVw
 							-->
-							<p><span class="image left"><img src="images/Trixpica_logo.png" alt="" width="225" height="225"/></span>
+							<p><span class="image left trixpicafirst"><img src="images/Trixpica_logo.png" alt=""/></span>
 								<strong>Trixpica</strong> is a concept idea. <strong>Trixpica</strong> will be a website built to connect the random miscellaneous information to people that are looking for
 								this said random miscellaneous information. This information, that I have discovered over the years, could be anything from how/where to learn to code all the way to free stuff on your birthday.
 								As someone who is always looking for a deal and spending plenty of time on a computer, <strong>Trixpica</strong> will be there to lead users to
 								<em>reliable</em> and <em>safe</em> websites. <strong>Trixpica</strong> will compile all the info, links to websites, reliability and security of websites, and guides
-								to one centralized location.<br />
+								to one centralized location.
 							</p>
-							<p><span class="image right"><img src="images/pic03.jpg" alt="" width="225" height="225"/></span>
+
+							<p><span class="image right trixpicasecond"><img src="images/pic03.jpg" alt=""/></span>
 								The idea for <strong>Trixpica</strong> came into play after realizing many countless hours searching brought you to either poor or useless information.
 								<strong>Trixpica</strong> is a refined search to remedy this. <strong>Trixpica</strong> will NOT discontinue any websites or take users from them,
 								but it will ensure that these users can find the information easier. An update that <strong>Trixpica </strong> will receive once released, will allow the use of a
