--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<section>
 								<span class="icon solid major fa-info-circle"></span>
 								<h3>About Linux development</h3>
-								<p>I currently trying to get my foot in the door with Linux Kernel Development. I am attempting to create my own device driver for the <strong>Logitech MX Master Mouse</strong>.
+								<p>I am currently trying to get my foot in the door with Linux Kernel Development. I am attempting to create my own device driver for the <strong>Logitech MX Master Mouse</strong>.
 									There already is a generic device driver, however, without the use of <strong>xbindkeys</strong>, the mouse really just isn't the same. <br /><em>[Uses C, on a Lenovo T430 Thinkpad, Kernel: 4.19.5, Host: Manjaro 17.2, Testing on VM with: Ubuntu 16.04 LTS]</em>
 								</p>
 							</section>
