fixed comma placement

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 									<div class="content">
 										<div class="inner">
 											<h2>Quadratic Solver</h2>
-											<p>The program takes in three inputs, a b c, in that order separated by a comma and gives back two answers in decimal form.</p>
+											<p>The program takes in three inputs: a, b, and c, in that order, each separated by a comma. The program will return two answers in decimal form.</p>
 											<ul class="actions">
 												<li><a href="quadratic_solver_tool.html" class="button">Learn more</a></li>
 											</ul>
