adding a new file: Component Collector and new job title

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 				<section id="intro" class="wrapper style1 fullscreen fade-up">
 					<div class="inner">
 						<h1>Neil Macklin-Camel</h1>
-						<br>Recent computer science graduate from Western Michigan University <br />
-						looking to start a career in software development. </p>
+						<br>Current Salesforce Developer I for BCBSM looking to expand my knowledge of programming. I would love to learn everything from Short Code to Python.</p>
 						<ul class="actions">
 							<li><a href="docs/Resume_Neil_Macklin-Camel_sendable.pdf" class="button scrolly">View Resume</a></li>
 						</ul>
@@ -47,7 +46,7 @@
 				<section id="one" class="wrapper style3-alt-green fade-up">
 					<div class="inner">
 						<h2>About me</h2>
-						<p>Recent CS graduate from WMU. <br />My favorite part of the CS field is linux development. However, I also enjoy web development and creating applications.</p>
+						<p>Current Salesforce Developer I for BCBSM looking to expand my knowledge of programming. <br />My favorite part of the CS field is linux development. However, I also enjoy web development and creating applications.</p>
 						<div class="features">
 							<section>
 								<span class="icon solid major fa-code"></span>
@@ -105,13 +104,13 @@
                             </section>
                             -->
 								<section>
-									<a href="quadratic_solver_tool.html" class="image" title="Quadratic Solver using 3 values"><img src="images/quadratic_solver_image.png" alt="" data-position="5% 5%" /></a>
+									<a href="component_collector.html" class="image" title="Component Collector"><img src="images/Component_Collector.png" alt="" data-position="50% 50%" /></a>
 									<div class="content">
 										<div class="inner">
-											<h2>Quadratic Solver</h2>
-											<p>The program takes in three inputs: a, b, and c, in that order, each separated by a comma. The program will return two answers in decimal form.</p>
+											<h2>Component Collector</h2>
+											<p><strong>Component Collector</strong> can be used to search a specific CPU or RAM and then collect various types of information that goes along with the given CPU or RAM.</p>
 											<ul class="actions">
-												<li><a href="quadratic_solver_tool.html" class="button">Learn more</a></li>
+												<li><a href="component_collector.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
