updating resume and title description

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 				<section id="intro" class="wrapper style1 fullscreen fade-up">
 					<div class="inner">
 						<h1>Neil Macklin-Camel</h1>
-						<br>Current Salesforce Developer I for BCBSM looking to expand my knowledge of programming. I would love to learn everything from Short Code to Python.</p>
+						<br>Current Web Developer for Ottaway Digital looking to expand my knowledge of programming. I would love to learn everything from Short Code to Python.</p>
 						<ul class="actions">
-							<li><a href="docs/Resume_Neil Macklin-Camel_OCT2020.pdf" class="button scrolly">View Resume</a></li>
+							<li><a href="docs/Resume_Neil_Macklin-Camel.pdf" class="button scrolly">View Resume</a></li>
 						</ul>
 					</div>
 				</section>
